--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,9 +1,14 @@
+2007-06-05  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_BR.po: Updated the Brazilian Portuguese translation
+	by Pablo Lerina <pabloalr@gmail.com>
+
 2007-05-20  Benedikt Meurer <benny@xfce.org>
 
 	* *.po, *.pot: Merge new strings.
 	* de.po: Update german translations.
 
-2007-05-16  Maximilian Schleiss <maxschleiss@solnet.ch>
+2007-05-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Added the Norwegian Bokmal translation
 	by Terje Uriansrud <ter@operamail.com>
@@ -32,12 +37,12 @@
 
 	* be.po: Updated Belarusian translation
 
-2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Minor fixes to the German translation
 	by Nico Schümann <nico@prog.nico22.de>
 
-2007-03-27  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-27  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: Updated the British translation
 	by Jeff Bailes <thepizzaking@gmail.com>
@@ -47,12 +52,12 @@
 	* it.po: Fixed an error.
 	* gl.po: Fixed header.
 
-2007-03-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Updated the German translation
 	by Nico Schümann <nico@prog.nico22.de>
 
-2007-02-22  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-22  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Brought some style in the German translation by
 	Nico Schümann <nico@prog.nico22.de>
@@ -61,7 +66,7 @@
 
 	* eu.po: Updated Basque translation.
 
-2007-02-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -69,7 +74,7 @@
 
 	* libexo-0.3.pot, *.po: Merge new strings.
 
-2007-02-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* Modified LINGUAS files to include Albanian language,
 	verified all the LINGUAS files.
@@ -79,16 +84,16 @@
 	* ar.po: initial commit.
 	* LINGUAS: adding ar language code
 
-2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed accelerators.
 
-2007-01-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
 
-2007-01-21  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ro.po: Updated the Romanian translation by
 	Mişu Moldovan <dumol@gnome.ro>
@@ -98,7 +103,7 @@
 	* === Released 0.3.2 ===
 	* *.po: Update Project-Id-Version.
 
-2007-01-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
 	Andrey Fedoseev <andrey.fedoseev@gmail.com>
@@ -111,7 +116,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2007-01-16  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
 	Szymon Kałasz <szymon_maestro@gazeta.pl>
@@ -120,11 +125,11 @@
 
 	* be.po: Updated Belarusian translation.
 
-2007-01-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-15  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed the French translation.
 
-2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* it.po: Updated the Italian translation by
 	Dario <dariolinux@tiscali.it>
@@ -133,16 +138,16 @@
 
 	* ca.po: Updated Catalan translations
 
-2007-01-12  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-12  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
-2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* cs.po: Updated the Czech translation by
 	Michal Várady <miko.vaji@gmail.com>
 
-2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
 	Piotr Maliński <admin@rk.edu.pl>
@@ -164,7 +169,7 @@
 
 	* eu.po: Updated Basque translation.
 
-2007-01-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -181,7 +186,7 @@
 
 	* hu.po: Fix invalid control sequence.
 
-2007-01-08  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-08  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -190,7 +195,7 @@
 	* libexo-0.3.pot, *.po: Merge new strings.
 	* de.po: Update german translations.
 
-2007-01-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -200,7 +205,7 @@
 	* libexo-0.3.pot, *.po: Merge new strings.
 	* de.po: Update german translations.
 
-2007-01-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -210,7 +215,7 @@
 	* libexo-0.3.pot, *.po: Merge new strings.
 	* de.po: Update german translations.
 
-2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -223,17 +228,17 @@
 	* libexo-0.3.pot, *.po: Merge changed strings.
 	* de.po: Update german translations.
 
-2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* mk.po: Added the Macedonian translation by
 	Pavle Jonoski <jonoski.pavle@gmail.com>
 
-2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
 	Andrey Fedoseev <andrey.fedoseev@gmail.com>
 
-2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* cy.po: Modified description text
 	* fr.po: Modified description text
@@ -251,7 +256,7 @@
 
 	* pt_BR.po: Updated brazilian portuguese translations.
 
-2006-10-29  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-10-29  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed some spelling mistakes in the French translation.
 
@@ -260,7 +265,7 @@
 	* dz.po: add Dzongkha translation by Dzongkha team
 	Tenzin <tdendup@dit.gov.bt>
 
-2006-10-22  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-10-22  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed spelling mistakes in the French translation.
 
@@ -419,7 +424,7 @@
 2006-06-16  Daichi Kawahata <daichi@xfce.org>
 
 	* fr.po: Updated French translations by Maximilian Schleiss
-	  <maxschleiss@bluewin.ch>.
+	  <maximilian@xfce.org>.
 	* libexo-0.3.pot, *.po: Updated.
 
 2006-06-10  Daichi Kawahata <daichi@xfce.org>
