--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-12	Stephan Arts <stephan@xfce.org>
+
+	* === Released 0.3.93 ===
+	* configure.in.in: Update version number
+
 2009-01-11	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in: Add missing docs subdirectories.
