--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-14	Jannis Pohlmann <jannis@xfce.org>
+
+	* configure.in.in: Post-release version bump.
+
 2009-01-12	Stephan Arts <stephan@xfce.org>
 
 	* === Released 0.3.93 ===
