--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-18	Jannis Pohlmann <jannis@xfce.org>
+
+	* configure.in.in: Add Makefiles for Spanish docs.
+
 2009-01-14	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in: Post-release version bump.
