--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* gl.po: Galician translation update (Leandro Regueiro)
+	* zh_CN: Simplified Chinese translation update (Chris K. Zhang)
+
 2009-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Polish translation update (Piotr Sokół)
