--- a/NEWS
+++ b/NEWS
@@ -2,12 +2,8 @@
 =======
 - Updated translations: ro (Mișu Moldovan), el (Stavros Giannouris), 
   es (Abel Martín), gl (Leandro Requeiro), zh_CN (Chris K. Zhang),
-  pl (Piotr Sokół), en_GB (Jeff Bailes)
-
-
-0.3.99.2
-========
-- Updated translations: fr (Mike Massonnet), tr (Eren Türkay)
+  pl (Piotr Sokół), en_GB (Jeff Bailes), fr (Mike Massonnet), 
+  tr (Eren Türkay)
 
 0.3.99.1
 ========
