--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-03-08 15:19+0100\n"
+"PO-Revision-Date: 2009-03-11 15:24+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -998,7 +998,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
-msgstr "Przegląda system plików w celu wybrania polecenia"
+msgstr "Przegląda system plików w celu wybrania programu"
 
 #: ../exo-helper/exo-helper-chooser.c:793
 msgid "_Other..."
@@ -1048,7 +1048,7 @@ msgstr "Nie udało się otworzyć pliku helpers.rc do zapisu"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Domyślna aplikacja dla danej czynności (przeglądarka, klient pocztowy, terminal)"
+msgstr "Wybiera domyślne programy dla różnych usług"
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
@@ -1066,7 +1066,9 @@ msgstr "Nie udało się uruchomić domyślnego emulatora terminala"
 msgid ""
 "Open the Preferred Applications\n"
 "configuration dialog"
-msgstr "Otwórz okno konfiguracji preferowanych programów"
+msgstr ""
+"Otwiera okno konfiguracji preferowanych\n"
+"                                  programów"
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
@@ -1079,10 +1081,12 @@ msgstr "ID gniazda"
 #: ../exo-helper/main.c:70
 msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
 msgstr ""
+"Uruchamia domyślny program określonego typu\n"
+"                                  z opcjonalnym parametrem"
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
-msgstr "TYP [PARAMETR]"
+msgstr "TYP [PARAMETR...]"
 
 #: ../exo-helper/main.c:93
 msgid ""
@@ -1358,7 +1362,7 @@ msgstr "Montuje za pośrednictwem pliku urządzenia"
 
 #: ../exo-mount/main.c:73
 msgid "Don't show any dialogs"
-msgstr "Nie wyświetla dialogów"
+msgstr "Nie wyświetla okien dialogowych"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:138
@@ -1461,7 +1465,7 @@ msgid ""
 "                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TYP [PARAMETR(Y)...]       Uruchamia preferowany program dla\n"
+"  --launch TYP [PARAMETR...]       Uruchamia preferowany program dla\n"
 "                                      określonego typu z opcjonalnymi\n"
 "                                      parametrami."
 
