--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-27  Maximilian Schleiss <maximilian@xfce.org>
+
+	* gl.po, LINGUAS: Galician translation added (Leandro Regueiro)
+
 2009-03-13  Maximilian Schleiss <maximilian@xfce.org>
 
 	* it.po, LINGUAS: Italian translation added (Cristian Marchi)
