--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-20  Mike Massonnet <mmassonnet@xfce.org>
+
+	* pt.po: Portuguese translation update (Nuno Miguel)
+	* tl_PH.po: Add Tagalog translation (Ian Besina)
+
 2009-04-16  Masato Hashimoto <cabezon.hashimoto@gmail.com>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
