--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Benedikt Meurer <benny@xfce.org>
+Jannis Pohlmann <jannis@xfce.org>
 
 Parts of this library are based on code from libegg, Gtk+, the GNOME project
 and the ROX Filer.
