--- a/po/ca.po
+++ b/po/ca.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-05 22:04+0200\n"
-"PO-Revision-Date: 2008-11-30 21:00+0100\n"
-"Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
+"PO-Revision-Date: 2009-05-26 18:05+0100\n"
+"Last-Translator: Harald Servat <redcrash@gmail.com>\n"
 "Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,14 +37,12 @@ msgid "The icon to render."
 msgstr "La icona a representar."
 
 #: ../exo/exo-cell-renderer-icon.c:191
-#, fuzzy
 msgid "GIcon"
-msgstr "Icona"
+msgstr "GIcon"
 
 #: ../exo/exo-cell-renderer-icon.c:192
-#, fuzzy
 msgid "The GIcon to render."
-msgstr "La icona a representar."
+msgstr "El Gicon a dibuixar."
 
 #: ../exo/exo-cell-renderer-icon.c:213
 msgid "size"
