--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-06-15  Mike Massonnet <mmassonnet@xfce.org>
+
+	* sl.po: Slovenian translation update (Alan Pepelko)
+	* zh_CN.po: Simplified Chinese update (Hunt Xu)
+
+
 2009-06-09  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation reworked
